Bug 489298 - Blurry thumbnails in Open/Save dialogs on HiDPI screens
Summary: Blurry thumbnails in Open/Save dialogs on HiDPI screens
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 6.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-27 10:58 UTC by Pavel Urusov
Modified: 2026-01-17 18:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.23
Sentry Crash Report:


Attachments
Screenshot showing the issue (259.83 KB, image/png)
2024-06-27 10:58 UTC, Pavel Urusov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Urusov 2024-06-27 10:58:03 UTC
Created attachment 171076 [details]
Screenshot showing the issue

SUMMARY
Thumbnails in Open/Save dialogs look blurry on HiDPI screens.

STEPS TO REPRODUCE
1. Open any KDE app on a HiDPI screen (in my case: 23" 4K display set to 200% scaling)
2. Open a file picker dialog and navigate to any folder containing pictures
3. Observe the issue

OBSERVED RESULT

File thumbnails look very blurry.

EXPECTED RESULT

File thumbnails look sharp/scaled correctly.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240625
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.6-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 560 Series
Comment 1 Nate Graham 2024-06-27 20:57:03 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2026-01-12 12:10:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2111
Comment 3 Méven 2026-01-17 18:01:35 UTC
Git commit a252bb37d831e12bb51ad9a158648a44d1f5356b by Méven Car.
Committed on 17/01/2026 at 17:41.
Pushed by meven into branch 'master'.

KFilePreviewGenerator: pass dpi to the PreviewJob

Also handle the overlay case.

M  +6    -3    src/filewidgets/kfilepreviewgenerator.cpp
M  +3    -1    src/filewidgets/kimagefilepreview.cpp

https://invent.kde.org/frameworks/kio/-/commit/a252bb37d831e12bb51ad9a158648a44d1f5356b