KFilePreviewGenerator: pass dpi to the PreviewJob

Also handle the overlay case.

BUG: 489298